# CrazyFlashNight

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CRAZYFLASHER7MercenaryEmpire.bat  CRAZYFLASHER7MercenaryEmpire.cs  CRAZYFLASHER7MercenaryEmpire.exe.bak  CRAZYFLASHER7MercenaryEmpire.html  CRAZYFLASHER7MercenaryEmpire.swf  CRAZYFLASHER7MercenaryEmpire_extracted.ps1  CrazyFlashNight.sln  README.md  SplitCraftingRecipes.ps1  SplitCraftingRecipes_v2.ps1  SplitCraftingRecipes_v3.ps1  TAG_SYSTEM_TEST.md  analyze_enemies.py  config.toml  config.xml  duplicate_analysis_report.txt  duplicate_report_FINAL.txt  duplicate_report_SEMANTIC.txt  duplicate_report_STRUCTURAL.txt  find_duplicates.py  find_duplicates_advanced.py  find_duplicates_semantic.py  find_duplicates_structural.py  fix_singleshoot.py  launcher_user_prefs.json  persistent_state_scan_report.json  process_information_dictionary.py  start_game.ps1  start_game_2_5.ps1  test_body_similarity.py  test_npc_loader.as  things_conflict_report.json  tmp-map-harness-dom.html  xml_fla.ps1  关卡22-4.fla  实验存档.fntl
.claude/: settings.json  settings.local.json
0.说明文件与教程/: 1.改动说明（含作弊码）.txt  Label与魔法种类与装备属性加成的类型汇总.txt  github项目操作文档.txt  git相关问题总结.docx  主文件fla化与文件结构改动说明.txt  好感度系统思路方案.xlsx  支线规划表.xlsx  材料的单位、关卡统计.xlsx  武器-技能数值-价格-合成表填写的参考公式（修改后请勿上传git）.xlsx  添加新物品和单位的教程.docx  (+2 more)
launcher/native/sol_parser/: Cargo.toml  build.bat
launcher/native/sol_parser/.cargo/: config.toml
launcher/native/sol_parser/examples/: oracle.rs
launcher/native/sol_parser/src/: lib.rs
launcher/native/sol_parser/tests/: reference_semantics.rs
(+7168 files in other folders)
