[package]
name = "sol_parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[dependencies]
flash-lso = { git = "https://github.com/ruffle-rs/rust-flash-lso", rev = "4b049ff30eed307fc6add6ede25f364ec7f45e87", features = ["serde"] }
serde_json = "1"
